--- a/content/blocks/logic/display/zzzzc-reality-projector-large.json
+++ b/content/blocks/logic/display/zzzzc-reality-projector-large.json
@@ -1,6 +1,6 @@
 {    
     "type": "LogicDisplay",
-    "name": "Reality Projector Large",
+    "name": "Large Reality Display",
     "health": 100,
     "size": 1,
     "displaySize": 224,
