--- a/content/blocks/logic/display/zzzzd-reality-projector-massive.json
+++ b/content/blocks/logic/display/zzzzd-reality-projector-massive.json
@@ -1,6 +1,6 @@
 {    
     "type": "LogicDisplay",
-    "name": "Reality Projector Massive",
+    "name": "Massive Reality Display",
     "health": 100,
     "size": 1,
     "displaySize": 320,
