--- a/content/blocks/logic/display/zzzze-reality-projector-gigantic.json
+++ b/content/blocks/logic/display/zzzze-reality-projector-gigantic.json
@@ -1,6 +1,6 @@
 {    
     "type": "LogicDisplay",
-    "name": "Reality Projector Gigantic",
+    "name": "Gigantic Reality Display",
     "health": 100,
     "size": 1,
     "displaySize": 640,
