--- a/content/blocks/logic/projector/projector-1-display.json
+++ b/content/blocks/logic/projector/projector-1-display.json
@@ -1,9 +1,9 @@
 {    
     "type": "LogicDisplay",
-    "name": "Omega Projector",
+    "name": "1x1 Projector",
     "health": 100,
     "size": 1,
-    "displaySize": 640,
+    "displaySize": 32,
     "requirements": [
         "metaglass/50",
         "camod-green/25"
